--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,11 +10,11 @@
     "https://github.com/*"
   ],
   "background": {
-    "scripts": ["js/background.js"],
+    "scripts": ["permissions/background.js"],
     "persistent": false
   },
   "page_action": {
-    "default_popup": "templates/popup.html",
+    "default_popup": "popup/popup.html",
     "default_icon": {
       "16": "images/get_started16.png",
       "32": "images/get_started32.png",
@@ -28,6 +28,6 @@
     "48": "images/get_started48.png",
     "128": "images/get_started128.png"
   },
-  "options_page": "templates/options.html",
+  "options_page": "options/options.html",
   "manifest_version": 2
 }
